win32/NET/netcdf_vb/NetCDF.vb


    ' int nc_put_vars_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const char *op);
    Declare Ansi Function nc_put_vars_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        ByVal op As String) As Int32
    ' int nc_get_vars_text(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	char *ip);
    Declare Ansi Function nc_get_vars_text Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       ByVal op As StringBuilder) As Int32
    ' int nc_put_vars_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const unsigned char *op);
    Declare Ansi Function nc_put_vars_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_vars_uchar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	unsigned char *ip);
    Declare Ansi Function nc_get_vars_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_vars_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const signed char *op);
    Declare Ansi Function nc_put_vars_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_vars_schar(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	signed char *ip);
    Declare Ansi Function nc_get_vars_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_vars_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const short *op);
    Declare Ansi Function nc_put_vars_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Int16) As Int32
    ' int nc_get_vars_short(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	short *ip);
    Declare Ansi Function nc_get_vars_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal ip() As Int16) As Int32
    ' int nc_put_vars_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const int *op);
    Declare Ansi Function nc_put_vars_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_vars_int(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	int *ip);
    Declare Ansi Function nc_get_vars_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_vars_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const long *op);
    Declare Ansi Function nc_put_vars_long Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_vars_long(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	long *ip);
    Declare Ansi Function nc_get_vars_long Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_vars_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const float *op);
    Declare Ansi Function nc_put_vars_float Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Single) As Int32
    ' int nc_get_vars_float(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	float *ip);
    Declare Ansi Function nc_get_vars_float Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
       <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
       <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_vars_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	const double *op);
    Declare Ansi Function nc_put_vars_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal op() As Double) As Int32
    ' int nc_get_vars_double(int ncid, int varid,
    '	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
    '	double *ip);
    Declare Ansi Function nc_get_vars_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal startp() As Int32, _
        <[In](), Out()> ByVal countp() As Int32, <[In](), Out()> ByVal stridep() As Int32, _
        <[In](), Out()> ByVal ip() As Double) As Int32

    'READING AND WRITING MAPPED ARRAYS
